--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
   "outputDirectory": "/Users/wgillis/db-hms/library/floop",
   "naming": ["title", "journal", "year"],
   "scanEvery": 0.1,
-  "dbDirectory": "/Users/wgillis/.floop"
+  "dbDirectory": "/Users/wgillis/.floop",
+  "removeSpaces": false
 }
