added a way of checking the md5sum for PDFs to see if they're different

--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.11",
+    "md5-file": "^4.0.0",
     "pdfjs-dist": "^2.0.943",
+    "pouchdb": "^7.0.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
     "superagent": "^4.1.0",
     "vue": "^2.6.7"
   },
