--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "an app designed to make organization of PDFs extremely easy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ui": "electron ui/main.js"
   },
   "author": "",
   "license": "ISC",
