--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "request-promise-native": "^1.0.7",
     "superagent": "^4.1.0",
     "vue": "^2.6.8",
+    "vue-context": "^3.4.0",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
